--- a/css/contactUs.css
+++ b/css/contactUs.css
@@ -1,18 +1,49 @@
-table.tblContactUs {
-  table-layout: auto;
+body {
+  background-color: #ffffff;
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+}
+
+table {
+  border: 100px;
+  border-color: blue;
   width: 100%;
 }
-
-h1.a {
+td {
+  border-radius: 10px;
+  width: 100%;
+  height: 5px;
+  vertical-align: top;
   text-align: left;
-  border-bottom-style: solid;
 }
 
-input.btnsend {
-  text-align: right;
-  border-radius: 10;
+input[type="text"],
+textarea {
+  background-color: #e3eaf4;
+  width: 100%;
+  padding: 5%;
+  border: 2px solid #738db3;
+  border-radius: 10px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 10px;
+  resize: vertical;
 }
-body {
-  background-color: rgb(165, 155, 255);
-  padding: 5px;
+.container {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+input[type="submit"] {
+  background-color: #00fd09;
+  color: black;
+  padding: 12px 25px;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  margin-left: 80%;
+}
+input[type="submit"] :hover {
+  background-color: #f2f2f2;
 }
