Added the contact us page

--- a/app/public/styles/contact.css
+++ b/app/public/styles/contact.css
@@ -52,7 +52,7 @@ form button {
   height: 50px;
   color: white;
   border: none;
-  background-color: #05ce91;
+  background-color: #0594ea;
   padding: 10px;
 }
 
